# Trabalho-Pr-tico-I---Computa-o-Gr-fica

./: README.md
TP1/: CMakeLists.txt  TrabalhoCG  main.cpp
TP1/ArquivosCMake/: CMakeCache.txt  Makefile  cmake_install.cmake
TP1/ArquivosCMake/TrabalhoCG_autogen/: deps
TP1/ArquivosCMake/TrabalhoCG_autogen/include/: main.moc  main.moc.d
